force-app/main/default/objects/Student__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>DATE OF BIRTH OF THE STUDENT</description>
    <inlineHelpText>ENTER YOUR DATE OF BIRTH</inlineHelpText>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>