force-app/main/default/objects/Student__c/fields/HOBBY__c.field-meta.xml
<CustomField>
    <fullName>HOBBY__c</fullName>
    <label>HOBBY</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRICKET</fullName>
            </value>
            <value>
                <fullName>VOLLEYBALL</fullName>
            </value>
            <value>
                <fullName>CHESS</fullName>
            </value>
            <value>
                <fullName>BOOK READING</fullName>
            </value>
            <value>
                <fullName>DRAWING</fullName>
            </value>
            <value>
                <fullName>BADMINTON</fullName>
            </value>
            <value>
                <fullName>WATCHING NEWS</fullName>
            </value>
            <value>
                <fullName>RESEARCHING TOPICS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>